--- a/index.html
+++ b/index.html
@@ -406,10 +406,10 @@
       <div class="rail">
         <button class="scroll-btn scroll-left" aria-label="Scroll left">‹</button>
         <div class="scroller" tabindex="0" aria-label="Portfolio carousel">
-          <!-- UPDATED: Removed Work Permit; centered titles for Skills, Experience, Certifications -->
+          <!-- UPDATED: Photos aligned with topics -->
           <article class="card">
             <img class="thumb" alt="Skills" loading="lazy"
-                 src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?w=1000&auto=format&fit=crop">
+                 src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?w=1000&auto=format&fit=crop">
             <div class="overlay">
               <h3 class="title center">Skills</h3>
               <p class="meta">Core technologies & strengths</p>
@@ -418,7 +418,7 @@
 
           <article class="card">
             <img class="thumb" alt="Experience" loading="lazy"
-                 src="https://images.unsplash.com/photo-1551836022-d5d88e9218df?w=1000&auto=format&fit=crop">
+                 src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?w=1000&auto=format&fit=crop">
             <div class="overlay">
               <h3 class="title center">Experience</h3>
               <p class="meta">Roles, impact & outcomes</p>
@@ -427,7 +427,7 @@
 
           <article class="card">
             <img class="thumb" alt="Certifications" loading="lazy"
-                 src="https://images.unsplash.com/photo-1523246194499-2f2e0a1023ae?w=1000&auto=format&fit=crop">
+                 src="https://images.unsplash.com/photo-1434030216411-0b793f4b4173?w=1000&auto=format&fit=crop">
             <div class="overlay">
               <h3 class="title center">Certifications</h3>
               <p class="meta">Verified credentials</p>
@@ -444,10 +444,10 @@
       <div class="rail">
         <button class="scroll-btn scroll-left" aria-label="Scroll skills left">‹</button>
         <div class="scroller" tabindex="0" aria-label="Skills carousel">
-          <!-- UPDATED: Music -> Movies; Reading -> Shows; centered titles for Blogs and Contact Me only -->
+          <!-- UPDATED: Photos aligned with topics -->
           <article class="card">
             <img class="thumb" alt="Movies" loading="lazy"
-                 src="https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?w=1000&auto=format&fit=crop">
+                 src="https://images.unsplash.com/photo-1536440136628-849c177e76a1?w=1000&auto=format&fit=crop">
             <div class="overlay">
               <h3 class="title">Movies</h3>
               <p class="meta">Film enthusiast & cinephile</p>
@@ -456,7 +456,7 @@
 
           <article class="card">
             <img class="thumb" alt="Shows" loading="lazy"
-                 src="https://images.unsplash.com/photo-1522869635100-9f4c5e86aa37?w=1000&auto=format&fit=crop">
+                 src="https://images.unsplash.com/photo-1574375927938-d5a98e8ffe85?w=1000&auto=format&fit=crop">
             <div class="overlay">
               <h3 class="title">Shows</h3>
               <p class="meta">Binge-watcher & series lover</p>
@@ -465,7 +465,7 @@
 
           <article class="card">
             <img class="thumb" alt="Blogs" loading="lazy"
-                 src="https://images.unsplash.com/photo-1499750310107-5fef28a66643?w=1000&auto=format&fit=crop">
+                 src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?w=1000&auto=format&fit=crop">
             <div class="overlay">
               <h3 class="title center">Blogs</h3>
               <p class="meta">Thoughts & insights</p>
@@ -475,7 +475,7 @@
           <!-- Contact Me mirrors Hire Me link exactly -->
           <a id="contactCardLink" href="contact.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Contact Me" loading="lazy"
-                 src="https://images.unsplash.com/photo-1596524430615-b46475ddff6e?w=1000&auto=format&fit=crop">
+                 src="https://images.unsplash.com/photo-1423666639041-f56000c27a9a?w=1000&auto=format&fit=crop">
             <div class="overlay">
               <h3 class="title center">Contact Me</h3>
               <p class="meta">Let's connect & collaborate</p>
@@ -533,7 +533,8 @@
         const g = ctx.createGain();
         g.gain.setValueAtTime(gain, t);
         g.gain.exponentialRampToValueAtTime(0.0001, t + dur);
-        src.connect(g); g.connect(master); src.start(t); src.stop(t + dur + 0.05);
+        src.connect(g); g.
+          connect(master); src.start(t); src.stop(t + dur + 0.05);
       }
 
       function hit(t, { type='sine', f0=60, f1=45, g0=1.0, gDur=0.9, len=1.0 } = {}){
