--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 
           <article class="card">
             <img class="thumb" alt="Shows" loading="lazy"
-                 src="https://images.unsplash.com/photo-1574375927938-d5a98e8ffe85?w=1000&auto=format&fit=crop">
+                 src="https://images.unsplash.com/photo-1522869635100-9f4c5e86aa37?w=1000&auto=format&fit=crop">
             <div class="overlay">
               <h3 class="title">Shows</h3>
               <p class="meta">Binge-watcher & series lover</p>
@@ -482,7 +482,7 @@
     // ---------- Play intro sound ----------
     async function playTaDum(){
       try {
-        const audio = new Audio('soundn.mp3');
+        const audio = new Audio('https://cdnjs.cloudflare.com/ajax/libs/ion-sound/3.0.7/sounds/bell_ring.mp3');
         audio.volume = 1.0;
         await audio.play();
       } catch (err) {
