--- a/index.html
+++ b/index.html
@@ -412,11 +412,11 @@
           </article>
 
           <article class="card">
-            <img class="thumb" alt="Shows" loading="lazy"
-                 src="https://images.unsplash.com/photo-1522869635100-9f4c5e86aa37?w=1000&auto=format&fit=crop">
+            <img class="thumb" alt="Gaming" loading="lazy"
+                 src="https://images.unsplash.com/photo-1511512578047-dfb367046420?w=1000&auto=format&fit=crop">
             <div class="overlay">
-              <h3 class="title">Shows</h3>
-              <p class="meta">Binge-watcher & series lover</p>
+              <h3 class="title">Gaming</h3>
+              <p class="meta">Strategy & adventure enthusiast</p>
             </div>
           </article>
 
@@ -482,8 +482,8 @@
     // ---------- Play intro sound ----------
     async function playTaDum(){
       try {
-        const audio = new Audio('https://cdnjs.cloudflare.com/ajax/libs/ion-sound/3.0.7/sounds/bell_ring.mp3');
-        audio.volume = 1.0;
+        const audio = new Audio('https://cdnjs.cloudflare.com/ajax/libs/ion-sound/3.0.7/sounds/door_bump.mp3');
+        audio.volume = 0.6;
         await audio.play();
       } catch (err) {
         console.log('Audio playback failed:', err);
@@ -554,8 +554,8 @@
       appRoot.classList.add('show'); 
     }
     
-    function hideMain(){ 
-      appRoot.classList.remove('show'); 
+    function hideMain(){
+appRoot.classList.remove('show'); 
     }
 
     function kickIntro(){
