--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
       <div class="hero-content">
         <h1 class="nf" style="white-space:nowrap">ANGEL CONTRERAS - CSULA STUDENT</h1>
         <p class="sub">Bachelor's in Computer Information Systems</p>
-        <p class="desc">Passionate about building innovative solutions and creating seamless digital experiences. Breaking into tech, one project at a time.</p>
+        <p class="desc">Passionate in building innovative solutions and creating seamless digital experiences. Breaking into tech, one project at a time.</p>
         <div class="cta">
           <a class="btn btn-white" href="#portfolio"><span aria-hidden="true">▶</span> Resume</a>
           <a class="btn btn-ghost" href="https://www.linkedin.com/in/angel-contreras-488539195/" target="_blank" rel="noopener"><span aria-hidden="true">ℹ</span> LinkedIn</a>
