--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
       <div class="hero-content">
         <h1 class="nf" style="white-space:nowrap">ANGEL CONTRERAS - CSULA STUDENT</h1>
         <p class="sub">Bachelor's in Computer Information Systems</p>
-        <p class="desc">Passionate in building innovative solutions and creating seamless digital experiences. Breaking into tech, one project at a time.</p>
+        <p class="desc">Passionate about building innovative solutions and creating seamless digital experiences. Breaking into tech, one project at a time.</p>
         <div class="cta">
           <a class="btn btn-white" href="#portfolio"><span aria-hidden="true">▶</span> Resume</a>
           <a class="btn btn-ghost" href="https://www.linkedin.com/in/angel-contreras-488539195/" target="_blank" rel="noopener"><span aria-hidden="true">ℹ</span> LinkedIn</a>
@@ -371,16 +371,25 @@
           <article class="card">
             <img class="thumb" alt="Skills" loading="lazy"
                  src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?w=1000&auto=format&fit=crop">
+            <div class="overlay" style="opacity:1;">
+              <h3 class="title center">Skills</h3>
+            </div>
           </article>
 
           <article class="card">
             <img class="thumb" alt="Experience" loading="lazy"
                  src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?w=1000&auto=format&fit=crop">
+            <div class="overlay" style="opacity:1;">
+              <h3 class="title center">Experience</h3>
+            </div>
           </article>
 
           <article class="card">
             <img class="thumb" alt="Certifications" loading="lazy"
                  src="https://images.unsplash.com/photo-1434030216411-0b793f4b4173?w=1000&auto=format&fit=crop">
+            <div class="overlay" style="opacity:1;">
+              <h3 class="title center">Certifications</h3>
+            </div>
           </article>
         </div>
         <button class="scroll-btn scroll-right" aria-label="Scroll right">›</button>
@@ -394,23 +403,35 @@
         <button class="scroll-btn scroll-left" aria-label="Scroll skills left">‹</button>
         <div class="scroller" tabindex="0" aria-label="Skills carousel">
           <article class="card">
-            <img class="thumb" alt="Movies" loading="lazy"
+            <img class="thumb" alt="Movies & Shows" loading="lazy"
                  src="https://images.unsplash.com/photo-1536440136628-849c177e76a1?w=1000&auto=format&fit=crop">
+            <div class="overlay" style="opacity:1;">
+              <h3 class="title center">Movies & Shows</h3>
+            </div>
           </article>
 
           <article class="card">
-            <img class="thumb" alt="Gaming" loading="lazy"
+            <img class="thumb" alt="Best Games" loading="lazy"
                  src="https://images.unsplash.com/photo-1511512578047-dfb367046420?w=1000&auto=format&fit=crop">
+            <div class="overlay" style="opacity:1;">
+              <h3 class="title center">Best Games</h3>
+            </div>
           </article>
 
           <article class="card">
             <img class="thumb" alt="Blogs" loading="lazy"
                  src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?w=1000&auto=format&fit=crop">
+            <div class="overlay" style="opacity:1;">
+              <h3 class="title center">Blogs</h3>
+            </div>
           </article>
 
           <a id="contactCardLink" href="contact.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Contact Me" loading="lazy"
                  src="https://images.unsplash.com/photo-1423666639041-f56000c27a9a?w=1000&auto=format&fit=crop">
+            <div class="overlay" style="opacity:1;">
+              <h3 class="title center">Contact Me</h3>
+            </div>
           </a>
         </div>
         <button class="scroll-btn scroll-right" aria-label="Scroll skills right">›</button>
@@ -539,6 +560,7 @@
         if (started) return; 
         started = true;
         try { await playTaDum(); } catch {}
+        window.remove
         window.removeEventListener('click', start);
         window.removeEventListener('keydown', start);
         window.removeEventListener('touchstart', start);
@@ -567,7 +589,6 @@
       window.scrollTo({ top: 0, behavior: 'auto' });
       replayIntro();
       kickIntro();
-      schedule
       scheduleAfterIntro();
     }
 
