--- a/index.html
+++ b/index.html
@@ -319,7 +319,6 @@
         <p class="sub">Bachelor's in Computer Information Systems</p>
         <p class="desc">Passionate about building innovative solutions and creating seamless digital experiences. Breaking into tech, one project at a time.</p>
         <div class="cta">
-          <!-- CHANGED: Resume button now links to AngelResume.pdf -->
           <a class="btn btn-white" href="AngelResume.pdf" target="_blank" rel="noopener"><span aria-hidden="true">▶</span> Resume</a>
           <a class="btn btn-ghost" href="https://www.linkedin.com/in/angel-contreras-488539195/" target="_blank" rel="noopener"><span aria-hidden="true">ℹ</span> LinkedIn</a>
         </div>
@@ -334,7 +333,6 @@
           <a href="gaurdcard.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Guard Card" loading="lazy" src="https://images.unsplash.com/photo-1568605117036-5fe5e7bab0b7?w=1000&auto=format&fit=crop">
             <div class="overlay">
-              <!-- CHANGED: force white text -->
               <h3 class="title center" style="color:#fff">Guard Card</h3>
             </div>
           </a>
@@ -366,12 +364,12 @@
       <div class="rail">
         <button class="scroll-btn scroll-left" aria-label="Scroll skills left">‹</button>
         <div class="scroller" tabindex="0" aria-label="Skills carousel">
-          <article class="card">
+          <a href="moviesshows.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Movies & Shows" loading="lazy" src="https://images.unsplash.com/photo-1536440136628-849c177e76a1?w=1000&auto=format&fit=crop">
             <div class="overlay">
-              <h3 class="title center">Movies & Shows</h3>
+              <h3 class="title center" style="color:#fff">Movies & Shows</h3>
             </div>
-          </article>
+          </a>
           <article class="card">
             <img class="thumb" alt="Best Games" loading="lazy" src="https://images.unsplash.com/photo-1511512578047-dfb367046420?w=1000&auto=format&fit=crop">
             <div class="overlay">
@@ -387,7 +385,6 @@
           <a id="contactCardLink" href="contact.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Contact Me" loading="lazy" src="https://images.unsplash.com/photo-1423666639041-f56000c27a9a?w=1000&auto=format&fit=crop">
             <div class="overlay">
-              <!-- CHANGED: force white text -->
               <h3 class="title center" style="color:#fff">Contact Me</h3>
             </div>
           </a>
