--- a/index.html
+++ b/index.html
@@ -370,12 +370,13 @@
               <h3 class="title center" style="color:#fff">Movies & Shows</h3>
             </div>
           </a>
-          <article class="card">
-            <img class="thumb" alt="Best Games" loading="lazy" src="https://images.unsplash.com/photo-1511512578047-dfb367046420?w=1000&auto=format&fit=crop">
+          <!-- LINKED TO videogames.html -->
+          <a href="videogames.html" class="card" style="text-decoration:none; cursor:pointer">
+            <img class="thumb" alt="Video Games" loading="lazy" src="https://images.unsplash.com/photo-1511512578047-dfb367046420?w=1000&auto=format&fit=crop">
             <div class="overlay">
-              <h3 class="title center">Best Games</h3>
+              <h3 class="title center" style="color:#fff">Video Games</h3>
             </div>
-          </article>
+          </a>
           <article class="card">
             <img class="thumb" alt="Blogs" loading="lazy" src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?w=1000&auto=format&fit=crop">
             <div class="overlay">
