--- a/videogames.html
+++ b/videogames.html
@@ -115,96 +115,60 @@
       These games have influenced my creativity, problem-solving, and love for interactive storytelling.
     </p>
 
-    <!-- Grid of “book-style” cards -->
+    <!-- Grid of "book-style" cards -->
     <section class="grid">
 
       <article class="card">
-        <img class="cover" alt="The Legend of Zelda: Breath of the Wild" src="https://images.unsplash.com/photo-1550745165-9bc0b252726f?q=80&w=1200&auto=format&fit=crop"/>
+        <img class="cover" alt="Kingdom Hearts" src="https://images.unsplash.com/photo-1578632292335-df3abbb0d586?q=80&w=1200&auto=format&fit=crop"/>
         <div class="panel">
-          <div class="game-title">The Legend of Zelda: Breath of the Wild</div>
-          <div class="by">Nintendo</div>
-          <p class="desc">An open-air adventure that rewards curiosity, experimentation, and creative problem-solving.</p>
+          <div class="game-title">Kingdom Hearts Franchise</div>
+          <div class="by">Square Enix</div>
+          <p class="desc">A magical blend of Disney and Final Fantasy that explores friendship, light, and darkness across countless worlds.</p>
         </div>
       </article>
 
       <article class="card">
-        <img class="cover" alt="The Witcher 3: Wild Hunt" src="https://images.unsplash.com/photo-1511512578047-dfb367046420?q=80&w=1200&auto=format&fit=crop"/>
+        <img class="cover" alt="Jak and Daxter" src="https://images.unsplash.com/photo-1552820728-8b83bb6b773f?q=80&w=1200&auto=format&fit=crop"/>
         <div class="panel">
-          <div class="game-title">The Witcher 3: Wild Hunt</div>
-          <div class="by">CD PROJEKT RED</div>
-          <p class="desc">A sprawling RPG with choice-driven quests, memorable characters, and masterful world-building.</p>
-        </div>
-      </article>
-
-      <article class="card">
-        <img class="cover" alt="God of War (2018)" src="https://images.unsplash.com/photo-1520975916090-3105956dac38?q=80&w=1200&auto=format&fit=crop"/>
-        <div class="panel">
-          <div class="game-title">God of War (2018)</div>
-          <div class="by">Santa Monica Studio</div>
-          <p class="desc">A cinematic journey about growth and fatherhood wrapped in tight combat and epic scale.</p>
-        </div>
-      </article>
-
-      <article class="card">
-        <img class="cover" alt="Red Dead Redemption 2" src="https://images.unsplash.com/photo-1506377247377-2a5b3b417ebb?q=80&w=1200&auto=format&fit=crop"/>
-        <div class="panel">
-          <div class="game-title">Red Dead Redemption 2</div>
-          <div class="by">Rockstar Games</div>
-          <p class="desc">A meticulously crafted Western that blends narrative weight with a living, breathing world.</p>
-        </div>
-      </article>
-
-      <article class="card">
-        <img class="cover" alt="Elden Ring" src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?q=80&w=1200&auto=format&fit=crop"/>
-        <div class="panel">
-          <div class="game-title">Elden Ring</div>
-          <div class="by">FromSoftware</div>
-          <p class="desc">Challenging combat and an eerie open world that invites exploration and rewards persistence.</p>
-        </div>
-      </article>
-
-      <article class="card">
-        <img class="cover" alt="Hades" src="https://images.unsplash.com/photo-1520975655092-6c2b2fc9b3b0?q=80&w=1200&auto=format&fit=crop"/>
-        <div class="panel">
-          <div class="game-title">Hades</div>
-          <div class="by">Supergiant Games</div>
-          <p class="desc">A stylish rogue-like with snappy combat and a smart narrative that builds with each run.</p>
-        </div>
-      </article>
-
-      <article class="card">
-        <img class="cover" alt="The Last of Us" src="https://images.unsplash.com/photo-1505740106531-4243f3831c78?q=80&w=1200&auto=format&fit=crop"/>
-        <div class="panel">
-          <div class="game-title">The Last of Us</div>
+          <div class="game-title">Jak and Daxter Franchise</div>
           <div class="by">Naughty Dog</div>
-          <p class="desc">An emotional story about survival and connection, set against a tense post-pandemic backdrop.</p>
+          <p class="desc">A vibrant platformer series that evolved from lighthearted adventure to darker, action-packed storytelling.</p>
         </div>
       </article>
 
       <article class="card">
-        <img class="cover" alt="Portal 2" src="https://images.unsplash.com/photo-1507878866276-a947ef722fee?q=80&w=1200&auto=format&fit=crop"/>
+        <img class="cover" alt="Hogwarts Legacy" src="https://images.unsplash.com/photo-1551269901-5c5e14c25df7?q=80&w=1200&auto=format&fit=crop"/>
         <div class="panel">
-          <div class="game-title">Portal 2</div>
-          <div class="by">Valve</div>
-          <p class="desc">Brilliant physics puzzles, witty writing, and co-op design that makes you feel clever.</p>
+          <div class="game-title">Hogwarts Legacy</div>
+          <div class="by">Avalanche Software</div>
+          <p class="desc">Currently Playing: An immersive journey through the Wizarding World with spellcasting, potion-making, and magical exploration.</p>
         </div>
       </article>
 
       <article class="card">
-        <img class="cover" alt="Minecraft" src="https://images.unsplash.com/photo-1511512578047-7f6fe1b6c9a0?q=80&w=1200&auto=format&fit=crop"/>
+        <img class="cover" alt="Sonic Crossworlds" src="https://images.unsplash.com/photo-1606144042614-b2417e99c4e3?q=80&w=1200&auto=format&fit=crop"/>
         <div class="panel">
-          <div class="game-title">Minecraft</div>
-          <div class="by">Mojang</div>
-          <p class="desc">A sandbox of infinite creativity—build, explore, and tell your own stories block by block.</p>
+          <div class="game-title">Sonic Crossworlds</div>
+          <div class="by">SEGA</div>
+          <p class="desc">Currently Playing: Fast-paced action and dimension-hopping adventures with the iconic blue hedgehog.</p>
         </div>
       </article>
 
       <article class="card">
-        <img class="cover" alt="Halo 3" src="https://images.unsplash.com/photo-1542751371-adc38448a05e?q=80&w=1200&auto=format&fit=crop"/>
+        <img class="cover" alt="Resident Evil 7" src="https://images.unsplash.com/photo-1509198397868-475647b2a1e5?q=80&w=1200&auto=format&fit=crop"/>
         <div class="panel">
-          <div class="game-title">Halo 3</div>
-          <div class="by">Bungie</div>
-          <p class="desc">Iconic sci-fi action with satisfying gunplay and co-op memories that defined a generation.</p>
+          <div class="game-title">Resident Evil 7</div>
+          <div class="by">Capcom</div>
+          <p class="desc">Currently Playing: A terrifying return to survival horror with first-person perspective and the sinister Baker family.</p>
+        </div>
+      </article>
+
+      <article class="card">
+        <img class="cover" alt="Little Nightmares 3" src="https://images.unsplash.com/photo-1614613535308-eb5fbd3d2c17?q=80&w=1200&auto=format&fit=crop"/>
+        <div class="panel">
+          <div class="game-title">Little Nightmares 3</div>
+          <div class="by">Supermassive Games</div>
+          <p class="desc">Currently Playing: A haunting puzzle-platformer where two children navigate through a dark and twisted world.</p>
         </div>
       </article>
 
